[gd_scene load_steps=8 format=2]

[ext_resource path="res://spoo_world/assets/typography/Lemonade Bold Demo.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://spoo_world/world/Admin/alerta_login.gd" type="Script" id=2]
[ext_resource path="res://spoo_world/assets/icon/button_bg.png" type="Texture" id=3]
[ext_resource path="res://spoo_world/assets/icon/arrow_back50.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 30
extra_spacing_char = 2
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 80
extra_spacing_char = 5
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 25
extra_spacing_char = 2
font_data = ExtResource( 1 )

[node name="alerta" type="Node2D"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 800.0
rect_pivot_offset = Vector2( 688, 544 )
color = Color( 0, 0, 0, 1 )

[node name="Password" type="Label" parent="."]
margin_left = 560.0
margin_top = 256.0
margin_right = 700.0
margin_bottom = 296.0
rect_pivot_offset = Vector2( 24, -8 )
custom_fonts/font = SubResource( 1 )
text = "Password:"

[node name="Password2" type="TextEdit" parent="Password"]
margin_left = -96.0
margin_top = 48.0
margin_right = 230.0
margin_bottom = 88.0
custom_constants/line_spacing = 8
custom_constants/completion_lines = -3

[node name="Titulo" type="Label" parent="."]
margin_left = 424.0
margin_top = 64.0
margin_right = 836.0
margin_bottom = 169.0
custom_fonts/font = SubResource( 2 )
text = "SPOO GAME"

[node name="JUGAR" type="Button" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 544.0
margin_top = 392.0
margin_right = 712.0
margin_bottom = 461.0
custom_colors/font_color = Color( 0.027451, 0.027451, 0.027451, 1 )
custom_fonts/font = SubResource( 3 )
text = "Ingresar"
icon = ExtResource( 3 )
flat = true
icon_align = 1
expand_icon = true

[node name="back" type="Button" parent="."]
margin_left = 7.0
margin_top = 9.0
margin_right = 81.0
margin_bottom = 96.0
mouse_filter = 1
icon = ExtResource( 4 )
flat = true
expand_icon = true

[connection signal="text_changed" from="Password/Password2" to="." method="_on_Password2_text_changed"]
[connection signal="pressed" from="JUGAR" to="." method="_on_JUGAR_pressed"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
